--- a/week0_HTML_CSS/html-intro-cookie/css/main.css
+++ b/week0_HTML_CSS/html-intro-cookie/css/main.css
@@ -11,10 +11,26 @@ P {
     font-size: 14pt;
 }
 
-H1 {
+h1 {
     font-family:Arial, Helvetica, sans-serif; 
     font-size: 36pt; 
     font-weight: bold;
+}
+
+h2  {
+    font-family:Arial, Helvetica, sans-serif; 
+    font-size: 24pt; 
+    font-weight: bold;
+}
+
+h3  {
+    font-family:Arial, Helvetica, sans-serif; 
+    font-size: 18pt; 
+}
+
+h3  {
+    font-family:Arial, Helvetica, sans-serif; 
+    font-size: 14pt; 
 }
 
 
