--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -8,12 +8,12 @@ div {
 
 P {
     font-family:Arial, Helvetica, sans-serif; 
-    font-size: 14pt;
+    font-size: 12pt;
 }
 
 h1 {
     font-family:Arial, Helvetica, sans-serif; 
-    font-size: 36pt; 
+    font-size: 24pt; 
     font-weight: bold;
 }
 
@@ -25,10 +25,10 @@ h2  {
 
 h3  {
     font-family:Arial, Helvetica, sans-serif; 
-    font-size: 18pt; 
+    font-size: 16pt; 
 }
 
 h4  {
-    font-family:Arial, Helvetica, sans-serif; 
+    font-family:'Times New Roman', Times, serif; 
     font-size: 14pt; 
 }
