--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -6,20 +6,20 @@ div {
     column-width: 600px;
 }
 
-P {
+p {
     font-family:Arial, Helvetica, sans-serif; 
     font-size: 12pt;
 }
 
 h1 {
     font-family:Arial, Helvetica, sans-serif; 
-    font-size: 24pt; 
+    font-size: 20pt; 
     font-weight: bold;
 }
 
 h2  {
     font-family:Arial, Helvetica, sans-serif; 
-    font-size: 24pt; 
+    font-size: 18pt; 
     font-weight: bold;
 }
 
