CSS changes forms

--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -1,9 +1,14 @@
 body {
-    background-color: lightgoldenrodyellow;
+    background-color: whitesmoke;
+  }
+
+navbar {
+    background-color: lightblue;
+    column-span:all;
   }
 
 div {
-    column-width: 600px;
+    column-width: 800px;
 }
 
 p {
