--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -7,7 +7,7 @@ nav {
     font-family: 'Courier New', Courier, monospace;
     font-size: 14pt;
     font-weight:bold;
-    font-color: #FFFFFF;
+    color: #FFFFFF;
   }
 
 div {
