--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -4,9 +4,10 @@ body {
 
 nav {
     background-color: #026d9c;
-    font-family: 'Courier New', Courier, monospace;
+    font-family:Arial, Helvetica, sans-serif;
     font-size: 14pt;
     font-weight:bold;
+    color: #ffffff;
   }
 
 div {
