--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -3,7 +3,7 @@ body {
   }
 
 nav {
-    background-color: #026d9c;
+    background-color: #fcba03;
     font-family:Arial, Helvetica, sans-serif;
     font-size: 14pt;
     font-weight:bold;
