--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -6,8 +6,8 @@ nav {
     background-color: #fcba03;
     font-family:Arial, Helvetica, sans-serif;
     font-size: 14pt;
-    font-weight:bold;
     line-height: 2;
+    text-decoration: underline bold white;
   }
 
 div {
