--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -3,10 +3,13 @@ body {
   }
 
 nav {
-    background-color: #fcba03;
+    background-color: hsl(263, 95%, 29%);
     font-family:Arial, Helvetica, sans-serif;
     font-size: 14pt;
     line-height: 2;
+  }
+
+  a {
     text-decoration: underline bold white;
   }
 
