--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -6,12 +6,11 @@ nav {
     background-color: hsl(263, 95%, 29%);
     font-family:Arial, Helvetica, sans-serif;
     font-size: 14pt;
+    text-decoration: underline bold white;
     line-height: 2;
   }
 
-  a {
-    text-decoration: underline bold;
-  }
+  
 
 div {
     column-width: 800px;
