--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -6,7 +6,7 @@ nav {
     background-color: hsl(263, 95%, 29%);
     font-family:Arial, Helvetica, sans-serif;
     font-size: 14pt;
-    text-decoration: underline bold white;
+    text-decoration: underline bold #FFFFFF;
     line-height: 2;
   }
 
