--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -1,44 +1,46 @@
 body {
-    background-color: whitesmoke;
+    background-color: #d0cfcf;
   }
 
 nav {
     background-color: hsl(263, 95%, 29%);
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: 14pt;
-    text-decoration: underline bold #FFFFFF;
     line-height: 2;
   }
 
-  
+ a {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14pt;
+    text-decoration: underline bold #ffffff;
+ } 
 
 div {
     column-width: 800px;
 }
 
 p {
-    font-family:Arial, Helvetica, sans-serif; 
-    font-size: 12pt;
+    font-family: 'Roboto', sans-serif; 
+    font-size: 11.5em;
+    
 }
 
 h1 {
-    font-family:Arial, Helvetica, sans-serif; 
+    font-family: Arial, Helvetica, sans-serif; 
     font-size: 20pt; 
     font-weight: bold;
 }
 
 h2  {
-    font-family:Arial, Helvetica, sans-serif; 
+    font-family: Arial, Helvetica, sans-serif; 
     font-size: 18pt; 
     font-weight: bold;
 }
 
 h3  {
-    font-family:Arial, Helvetica, sans-serif; 
+    font-family: Arial, Helvetica, sans-serif; 
     font-size: 16pt; 
 }
 
 h4  {
-    font-family:'Times New Roman', Times, serif; 
+    font-family: 'Times New Roman', Times, serif; 
     font-size: 14pt; 
 }
