--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -5,13 +5,10 @@ body {
 nav {
     background-color: hsl(263, 95%, 29%);
     line-height: 2;
-  }
-
- a {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14pt;
     text-decoration: underline bold #ffffff;
- } 
+  }
 
 div {
     column-width: 800px;
@@ -19,7 +16,7 @@ div {
 
 p {
     font-family: 'Roboto', sans-serif; 
-    font-size: 11.5em;
+    font-size: 14pt;
     
 }
 
