--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -7,7 +7,8 @@ nav {
     line-height: 2;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14pt;
-    text-decoration: underline bold #ffffff;
+    color: #ffffff;
+    text-decoration: underline bold;
   }
 
 div {
