--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -5,8 +5,8 @@ body {
 nav {
     background-color: hsl(264, 64%, 81%);
     line-height: 2;
-    font-family: Arial, Helvetica, sans-serif
-    font-size: 14pt;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18pt;
     text-decoration: underline bold purple;
 }
 
