--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -7,7 +7,7 @@ nav {
     line-height: 2;
     font-family: 'Roboto', sans-serif;
     font-size: 18pt;
-    text-decoration: underline bold purple;
+    text-decoration: underline bold #ffffff;
 }
 
 
