--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -11,7 +11,7 @@ nav {
 }
 
 .form {
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    font-family:Arial, Helvetica, sans-serif
     font-size: 12pt;
     font-weight: bold;
     color: rgb(78, 22, 78);
