--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -17,13 +17,19 @@ nav {
     color: rgb(78, 22, 78);
 }
 
+.form-header {
+    font-family:Arial, Helvetica, sans-serif
+    font-size: 18pt;
+    font-weight: bold;
+}
+
 a {
     color:hsl(264, 64%, 81%)
 }
 
 
 div {
-    column-width: 800px;
+    column-width: 600px;
 }
 
 p {
