--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -2,12 +2,12 @@ body {
     background-color: #d0cfcf;
   }
 
-nav {
-    background-color: hsl(263, 63%, 52%);
+nav a {
+    background-color: hsl(263, 100%, 23%);
     line-height: 2;
     font-family: 'Roboto', sans-serif;
     font-size: 14pt;
-    text-decoration: underline bold;
+    text-decoration: underline #ffffff bold;
 }
 
 .form {
