--- a/week0_HTML_CSS/html-intro-form/css/main.css
+++ b/week0_HTML_CSS/html-intro-form/css/main.css
@@ -5,10 +5,7 @@ body {
 nav {
     background-color: hsl(263, 100%, 23%);
     line-height: 2;
-}
-
-nav a {
-    font-family: 'Roboto', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 14pt;
     text-decoration: underline bold whitesmoke;
 }
