CSS Positioning Exercise 1-5 CSS mockups

--- a/week0_HTML_CSS/css-positioning/exercise3/css/style.css
+++ b/week0_HTML_CSS/css-positioning/exercise3/css/style.css
@@ -3,12 +3,14 @@ body {
   border: 5px solid black;
   height: 100vh;
   position: relative;
+  box-sizing: border-box;
 }
 
 .one {
   width: 400px;
   height: 400px;
   background-color: red;
+  position: relative;
 }
 
 .two {
@@ -28,3 +30,16 @@ body {
   height: 100px;
   background-color: blue;
 }
+
+.three {
+  position: absolute;
+  bottom: 0;
+  right: -200px;
+}
+
+.four {
+  position: absolute;
+  bottom: 0;
+}
+
+
