--- a/week0_HTML_CSS/css-positioning/exercise4/css/style.css
+++ b/week0_HTML_CSS/css-positioning/exercise4/css/style.css
@@ -3,12 +3,14 @@ body {
   border: 5px solid black;
   height: 100vh;
   position: relative;
+  box-sizing: border-box;
 }
 
 .one {
   width: 400px;
   height: 400px;
   background-color: red;
+  position: relative;
 }
 
 .two {
@@ -27,4 +29,16 @@ body {
   width: 100px;
   height: 100px;
   background-color: blue;
+}
+
+.two, .four {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.three {
+  position: absolute;
+  top: -100px;
+  left: -100px;
 }
