--- a/week0_HTML_CSS/css-positioning/exercise1/css/style.css
+++ b/week0_HTML_CSS/css-positioning/exercise1/css/style.css
@@ -3,6 +3,7 @@ body {
   border: 5px solid black;
   height: 100vh;
   position: relative;
+  box-sizing: border-box;
 }
 
 .one {
@@ -27,4 +28,10 @@ body {
   width: 100px;
   height: 100px;
   background-color: blue;
+}
+
+.two, .three, .four {
+  position: relative;
+  top: 50px;
+  left: 50px;
 }
