--- a/week0_HTML_CSS/css-mocks/css/style.css
+++ b/week0_HTML_CSS/css-mocks/css/style.css
@@ -30,7 +30,7 @@ button:hover {
 }
 
 .pic {
-	background-image: url('catpic.jpg');
+	background-image: url("../imgs/catpic.jpg");
 	width: 100%;
 	padding-bottom: 60%;
 	background-size: cover;
