--- a/week0_HTML_CSS/css-mocks/css/style.css
+++ b/week0_HTML_CSS/css-mocks/css/style.css
@@ -52,5 +52,62 @@ button:hover {
 	border-top: 1px solid #ccc;
 	border-bottom-right-radius: 8px;
 	border-bottom-left-radius: 8px;
-	font-size: 16px;
+	font-size: 1rem;
+  }
+
+
+  .cards {
+	display: flex;
+	justify-content: space-around;
+  }
+
+  .card {
+	width: 250px;
+	height: 250px;
+	overflow: hidden;
+	position: relative;
+	border-radius: 6px;
+	border: 6px solid lightpink;
+	background-color: #ccc;
+  }
+
+  .pic-container {
+	width: 100%;
+  	height: 100%;
+  	background-position: center;
+  	border-radius: 6px;
+  	background-size: cover;
+  }
+
+ 
+ .pic1 {
+	background-image: url("https://media.giphy.com/media/HrB1MUATg24Ra/giphy.gif");
+  }
+
+  .pic2 {
+	background-image: url("https://media.giphy.com/media/Y8bL4lil6jive/giphy.gif");
+  }
+
+  .pic3 {
+	background-image: url("https://media.giphy.com/media/OcZp0maz6ALok/giphy.gif");
+  }
+
+  .caption {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	position: absolute;
+	top: 250px;
+	transition: top 0.6s;
+	background-color: rgba(255, 0, 0, 0.7);
+	color: white;
+	align-items: center;
+	justify-content: center;
+	font-size: 2rem;
+	text-align: center;
+	border-radius: 6px;
+  }
+
+  .card:hover .caption {
+	top: 0;
   }
