catpic URL replace

--- a/week0_HTML_CSS/css-mocks/css/style.css
+++ b/week0_HTML_CSS/css-mocks/css/style.css
@@ -30,7 +30,7 @@ button:hover {
 }
 
 .pic {
-	background-image: url("../imgs/catpic.jpg");
+	background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZ1yCAnWze1-qu-KQY75TIdMbLdDs3Y4T4WQegXF9Tspo2xI8v");
 	width: 100%;
 	padding-bottom: 60%;
 	background-size: cover;
