--- a/week0_HTML_CSS/css-mocks/css/style.css
+++ b/week0_HTML_CSS/css-mocks/css/style.css
@@ -92,7 +92,7 @@ button:hover {
 	background-image: url("https://media.giphy.com/media/OcZp0maz6ALok/giphy.gif");
   }
 
-  .caption {
+  .card-rollover {
 	width: 100%;
 	height: 100%;
 	display: flex;
@@ -103,11 +103,11 @@ button:hover {
 	color: white;
 	align-items: center;
 	justify-content: center;
-	font-size: 2rem;
+	font-size: 3rem;
 	text-align: center;
 	border-radius: 6px;
   }
 
-  .card:hover .caption {
+  .card:hover .card-rollover {
 	top: 0;
   }
