--- a/8-4-6_todo-list/style.css
+++ b/8-4-6_todo-list/style.css
@@ -1,8 +1,25 @@
 
+.form-container {
+	  width: 300px;
+  	height: 100%;
+    padding: 5px;
+    background-color: peachpuff; 
+  	background-position: center;
+    border: 2px solid peru;
+  	border-radius: 6px;
+  	background-size: cover;
+}
+
 h1 {
   font-size: 20px;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  text-align: center;
   color: purple;
+}
+
+li {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
 }
 
 button {
