additional background color button

--- a/memory-game/style.css
+++ b/memory-game/style.css
@@ -1,6 +1,6 @@
  body {
-  background-color: rgb(189, 236, 246);
-  margin 0 auto;
+  background-color:lightblue;
+  margin: 0 auto;
 }
 
 #container {
