--- a/connect-four/connect4.css
+++ b/connect-four/connect4.css
@@ -3,13 +3,13 @@
 #board td {
   width: 50px;
   height: 50px;
-  border: solid 1px #666;
+  border: solid 2px #666;
 }
 
 /* pieces are div within game table cells: draw as colored circles */
 
 .piece {
-  /* TODO: make into circles */
+  position: absolute
   margin: 5px;
   width: 80%;
   height: 80%;
@@ -29,9 +29,24 @@
 /* column-top is table row of clickable areas for each column */
 
 #column-top td {
-  border: dashed 1px lightgray;
+  border: dashed 2px lightgray;
 }
 
 #column-top td:hover {
   background-color: gold;
+  transition: color 0.3s ease-in, background-color 0.3s ease-in;
+}
+
+.fall {
+  animation-name: fall-animation;
+  animation-duration: 500ms;
+}
+
+@keyframes fall-animation {
+  from {
+      transform: translateY(-500px);
+  }
+  to {
+      transform: translateY(0);
+  }
 }
