connect-four js fixes and css updates

--- a/connect-four/connect4.css
+++ b/connect-four/connect4.css
@@ -1,19 +1,37 @@
+.game {
+  display: block;
+  height: 100%
+  border: solid 3px black;
+  background-color: blue;
+  margin:0 auto;
+  z-index: -1;
+}
+
+
 /* game board table */
 
 #board td {
+  display: absolute;
   width: 50px;
   height: 50px;
-  border: solid 2px #666;
+  border: solid 4px black;
+  border-radius: 50%;
+  margin:0 auto;
+  z-index: 1;
 }
 
 /* pieces are div within game table cells: draw as colored circles */
 
 .piece {
-  position: absolute
   margin: 5px;
   width: 80%;
   height: 80%;
   border-radius: 50%;
+  border: solid 2px black;
+  z-index: 2;
+  margin-left:auto;
+  margin-right: auto;
+  display: block;
 }
 
 /* TODO: make pieces red/blue,  depending on player 1/2 piece */
@@ -29,9 +47,11 @@
 /* column-top is table row of clickable areas for each column */
 
 #column-top td {
-  border: dashed 2px lightgray;
+  background-color: gold;
+  border: dashed 2px black;
 }
 
 #column-top td:hover {
   background-color: gold;
-  transition: color 0.3s ease-in, background-color 0.3s ease-in;
+  transition: color 0.5s ease-in, background-color 0.5s ease-in;
+}
