--- a/connect-four/connect4.css
+++ b/connect-four/connect4.css
@@ -1,10 +1,18 @@
+#container {
+width: 35%;
+background-color: lightblue;
+padding: 10px;
+z-index: 1;
+margin:0 auto;
+margin-top: 10px;
+}
+
 .game {
   display: block;
-  height: 100%
+  height: 100%;
   border: solid 3px black;
-  background-color: blue;
   margin:0 auto;
-  z-index: -1;
+  z-index: 2;
 }
 
 
@@ -15,9 +23,10 @@
   width: 50px;
   height: 50px;
   border: solid 4px black;
+  background-color: white;
   border-radius: 50%;
   margin:0 auto;
-  z-index: 1;
+  z-index: 3;
 }
 
 /* pieces are div within game table cells: draw as colored circles */
@@ -47,7 +56,6 @@
 /* column-top is table row of clickable areas for each column */
 
 #column-top td {
-  background-color: gold;
   border: dashed 2px black;
 }
 
