--- a/connect-four/connect4.css
+++ b/connect-four/connect4.css
@@ -150,6 +150,24 @@ p.p2text {
   color: White;
 }
 
+h1 {
+  display: absolute;
+  margin-top: -10px;
+  text-align: center;
+  font-size: 5rem;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color: rgb(65, 65, 65);
+}
+
+h2 {
+  display: absolute;
+  margin-top: -60px;
+  text-align: center;
+  font-size: 14px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: rgb(65, 65, 65);
+}
+
 
 
 
