--- a/connect-four/connect4.css
+++ b/connect-four/connect4.css
@@ -10,7 +10,6 @@ padding: 10px;
 .game {
   display: block;
   height: 100%;
-  width: 100%;
   border: solid 3px black;
   margin:0 auto;
   z-index: 2;
@@ -26,6 +25,7 @@ padding: 10px;
   background-color: white;
   border-radius: 50%;
   margin:0 auto;
+  padding: 5px;
   z-index: 3;
 }
 
