--- a/connect-four-oo/connect4.css
+++ b/connect-four-oo/connect4.css
@@ -18,7 +18,7 @@
 }
 
 input {
-  width: 30%;
+  width: 35%;
   height: 30px;
   border-radius: 6px;
   border: solid 2px black;
@@ -90,7 +90,7 @@ h1 {
   text-align: center;
   padding: 0;
   font-size: 6rem;
-  font-family: Righteous;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   color: purple;
   text-shadow: 2px 2px 2px #666;
   background-image: linear-gradient(lightgrey, white);
