--- a/connect-four-oo/connect4.css
+++ b/connect-four-oo/connect4.css
@@ -89,8 +89,9 @@ h1 {
   margin: 0 auto;
   text-align: center;
   padding: 0;
-  font-size: 6rem;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 5rem;
+  font-family: "Audiowide", sans-serif;;
+  font-weight: bold;
   color: purple;
   text-shadow: 2px 2px 2px #666;
   background-image: linear-gradient(lightgrey, white);
