--- a/connect-four-oo/connect4.css
+++ b/connect-four-oo/connect4.css
@@ -1,6 +1,6 @@
 #container {
   background-color: blue;
-  width: 37%;
+  width: 38%;
   z-index: 1;
   margin-top: 10px;
   margin-left: auto;
@@ -9,7 +9,7 @@
 }
 
 #inputContainer {
-  width: 37%;
+  width: 38%;
   z-index: 1;
   margin: 0 auto;
   margin-left: auto;
@@ -62,14 +62,15 @@ button:hover {
   background-color: white;
   border-radius: 50%;
   padding: 5px;
+  margin: 5px;
 }
 
 /* pieces are div within game table cells: draw as colored circles */
 
 .piece {
   margin: 0 auto;
-  width: 90%;
-  height: 90%;
+  width: 95%;
+  height: 95%;
   border-radius: 50%;
 }
 
