--- a/connect-four-oo/connect4.css
+++ b/connect-four-oo/connect4.css
@@ -90,8 +90,8 @@ h1 {
   margin: 0 auto;
   text-align: center;
   padding: 0;
-  font-size: 5rem;
-  font-family: "Audiowide", sans-serif;;
+  font-size: 6rem;
+  font-family: "Righteous", sans-serif;
   font-weight: bold;
   color: purple;
   text-shadow: 2px 2px 2px #666;
