--- a/connect-four-oo/connect4.css
+++ b/connect-four-oo/connect4.css
@@ -1,11 +1,15 @@
+body {
+  background-color: black;
+}
+
 #container {
   background-color: blue;
-  width: 38%;
+  width: 40%;
   z-index: 1;
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
-  padding: 5px;
+  padding: 10px;
 }
 
 #inputContainer {
@@ -44,7 +48,7 @@ button:hover {
 .game {
   height: 100%;
   align-content: center;
-  border: solid 3px black;
+  border: solid 6px black;
   margin: 0 auto;
   margin-left: auto;
   margin-right: auto;
@@ -61,8 +65,8 @@ button:hover {
   border: solid 4px black;
   background-color: white;
   border-radius: 50%;
-  padding: 5px;
-  margin: 5px;
+  padding: 6px;
+  margin: 6px;
 }
 
 /* pieces are div within game table cells: draw as colored circles */
@@ -93,8 +97,11 @@ h1 {
   font-size: 6rem;
   font-family: "Righteous", sans-serif;
   font-weight: bold;
-  color: purple;
-  text-shadow: 2px 2px 2px #666;
-  background-image: linear-gradient(lightgrey, white);
+  color: white;
+  text-shadow: 2px 2px 2px black;;
+  background-color: purple;
+  width: 45%;
+  border-radius: 18px;
+  
 }
 
