--- a/connect-four-oo/connect4.css
+++ b/connect-four-oo/connect4.css
@@ -12,10 +12,10 @@ body {
   border: solid 2px grey;
   border-radius: 8px;
   text-align: center;
-  color:rgb(189, 236, 246);
+  color: white;
   font-size: 1rem;
   font-family: "Righteous", sans-serif;
-  background-color: black; 
+  background-color: black;
   z-index: 50; 
   cursor: pointer; 
 }
