--- a/connect-four-oo/connect4.css
+++ b/connect-four-oo/connect4.css
@@ -4,11 +4,10 @@ body {
 
 #overlay {
   position:absolute;
-  display: flex;
   margin: 0 auto;
   padding: 10px;
-  margin-top: -5px;
-  margin-left: -40px;
+  margin-top: -10px;
+  margin-left: -60px;
   width: 42%;
   border: solid 2px grey;
   border-radius: 8px;
@@ -56,9 +55,10 @@ button:hover {
 }
 
 #gameContainer {
-  width: 38%;
+  width: 36%;
   z-index: 1;
   margin: 0 auto;
+  border: 2px solid black;
   background-color: blue;
   padding: 5px;
   }
@@ -70,7 +70,6 @@ button:hover {
   margin: 0 auto;
   margin-left: auto;
   margin-right: auto;
-  padding: 10px;
   margin: 10px;
   z-index: 2;
 }
@@ -85,7 +84,8 @@ button:hover {
   border: solid 4px black;
   background-color: white;
   border-radius: 50%;
-  padding: 10px;
+  z-index: 5;
+  padding: 5px;
 }
 
 /* pieces are div within game table cells: draw as colored circles */
@@ -95,6 +95,12 @@ button:hover {
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  animation: drop .5s linear;
+}
+
+@keyframes drop {
+  0% { transform: translateY(-800px); }
+  100% { transform: translateY(0px); }
 }
 
 
