add image to intro overlay

--- a/connect-four-oo/connect4.css
+++ b/connect-four-oo/connect4.css
@@ -7,10 +7,10 @@ body {
   margin: 0 auto;
   padding: 10px;
   margin-top: -10px;
-  margin-left: -60px;
+  margin-left: -50px;
   width: 42%;
   border: solid 2px grey;
-  border-radius: 8px;
+  border-radius: 10px;
   text-align: center;
   color: white;
   font-size: 1rem;
@@ -127,5 +127,14 @@ h1 {
   background-color: purple;
   width: 45%;
   border-radius: 18px;
+  z-index: 5;
 }
+
+img {
+  box-shadow: 4px 4px 1px #ccc;
+  -moz-box-shadow: 4px 4px 1px #ccc;
+  -webkit-box-shadow: 4px 4px 1px #ccc;
+  -khtml-box-shadow: 4px 4px 1px #ccc;
+}
+
 
