--- a/flask-boggle/static/boggle.css
+++ b/flask-boggle/static/boggle.css
@@ -77,7 +77,7 @@ button {
   }
 
   p {
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     color: #0a0a23;
     margin-bottom: 10px;
@@ -85,15 +85,15 @@ button {
 
   .high-score {
     display: absolute;
-    margin-left: 200px;
+    margin-left: 210px;
     margin-top: -60px;
     margin-bottom: 0;
     width: 120px;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     color: #fff;
     background-color: purple;
     border: solid 2px black;
-    padding: 6px;
+    padding: 4px;
     border-radius: 10px;
   }
