--- a/flask-boggle/templates/index.html
+++ b/flask-boggle/templates/index.html
@@ -13,13 +13,11 @@
   <div class="container">
     <h1>Boggle</h1>
     <div class="high-score">
-      <h3>High score: <span>{{session['highscore']}} in {{session['nplays']}} play(s)</span></h3>
+      <h3>High score: <span>{{session['highscore']}}  in {{session['nplays']}} play(s)</span></h3>
     </div>
-    <ul>
-      <li>Find as many words as you can in 60 seconds.</li>
-      <li>Words must be in the dictionary.</li>
-      <li>Score is based on word length.</li>
-    </ul>
+    <div>
+      <p>Find as many words as you can in 60 seconds.</p>
+    </div>
   </div>
     <section id="boggle">
         <table class="board">
