--- a/flask-boggle/static/boggle.css
+++ b/flask-boggle/static/boggle.css
@@ -1,4 +1,5 @@
 .container {
+    display: flex;
     margin: 0 auto;
     width: 100%;
     background-color:aliceblue;
@@ -29,14 +30,6 @@
     height: 1.5em;
 }
 
-.container {
-    margin: 0 auto;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-top: 10px;
-    display: inline;
-    width: 400px;
-}
-
 input {
   display: inline;
   width: 240px;
@@ -62,7 +55,7 @@ input {
 
 button {
     display: inline;
-    height: 30px;
+    height: 35px;
     vertical-align: top;
     background-color:purple;
     color: #fff;
@@ -86,39 +79,52 @@ button {
     margin-bottom: 6px;
   }
 
-  h4 {
+  h3 {
+    display: relative ;
+    font-family: "Righteous", cursive;
+    font-size: 1rem;
+    color: white;
+  }
+
+  p {
     font-family: "Righteous", cursive;
     font-size: 16px;
-    color: white;
+    color: black;
     margin-top: 0px;
     margin-bottom: 6px;
   }
 
-  p {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    color: #0a0a23;
-    margin-bottom: 5px;
-    max-width: 400px;
-  }
-
   li {
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     color: black;
     text-align: left;
     max-width: 400px;
   }
 
-
-  .high-score {
+  .scoreboard {
+    display: inline-flex;
     margin: 0 auto;
-    width: 220px;
-    background-color: purple;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 170px;
+    background-color: lightgrey;
     border: solid 2px black;
     border-radius: 10px;
+    padding: 5px 5px;
+  }
+
+
+  .high-score {
+    display: inline-flex;
+    margin: 0 auto;
+    margin-top: 10px;
     margin-bottom: 10px;
-    padding: 3px;
+    width: 110px;
+    background-color:yellow;
+    border: solid 2px black;
+    border-radius: 10px;
+    padding: 5px 5px;
   }
 
   .navbar {
@@ -145,9 +151,6 @@ button {
   .footer {
     background-color: black;
     color: white;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    font-size: 10px;
-    padding: 10px;
+    margin: 0 auto;
+    padding: 1px;
   }
