--- a/flask-boggle/templates/index.html
+++ b/flask-boggle/templates/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <nav class="navbar">
-    <a href="#">BOGGLE</a><a href="/">Restart</a>
+    <a href="#">BOGGLE</a><a href="/">Restart Game</a>
   </nav>
 
 <div class="container">
