--- a/flask-boggle/templates/index.html
+++ b/flask-boggle/templates/index.html
@@ -12,11 +12,11 @@
 <body>
 
   <nav class="navbar">
-    <a href="#">BOGGLE</a><a href="/">Restart Game</a>
+    <a href="/">BOGGLE</a><a href="/">New Game</a>
   </nav>
 
 <div class="container">
-    <section id="boggle">
+  <section id="boggle">
       <h1>Boggle</h1>
       <div>
         <p>Find as many words as you can in 60 seconds.</p>
@@ -46,19 +46,19 @@
           <input name="word" class="word" autofocus placeholder="Type word and press enter">
           <button>Enter</button> 
         </form>
-
-    <p class="msg">
-        <!-- our JS will put messages here dynamically -->
-     </p>
-    <ul class="words">
-        <!-- our JS will words here as they score -->   
-    </ul> 
-  </section> 
+        
+        <p class="msg">
+            <!-- our JS will put messages here dynamically -->
+        </p>
+         <ul class="words">
+            <!-- our JS will words here as they score -->   
+        </ul> 
+    </section>
 </div>
 
- <footer class="footer">
+<footer class="footer">
   <h3>&copy; 2023 russeth designs</h3>
-</div>
+</footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
