--- a/flask-boggle/static/boggle.css
+++ b/flask-boggle/static/boggle.css
@@ -1,5 +1,4 @@
 .container {
-    display: flex;
     margin: 0 auto;
     width: 100%;
     background-color:aliceblue;
@@ -9,6 +8,12 @@
   margin: 0 auto;
   text-align: center;
   width: 400px;
+}
+
+#message-box {
+  margin: 0 auto;
+  width: 200px;
+  border: 1px solid black;
 }
 
 .board {
