css fixes to update the game layout

--- a/flask-boggle/templates/index.html
+++ b/flask-boggle/templates/index.html
@@ -1,73 +1,23 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" href="static/boggle.css"> 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous">
-  <title> Boggle Game </title>
- 
-</head>
-<body>
+{% extends 'base.html' %}
 
-  <nav class="navbar">
-    <a href="/">BOGGLE</a><a href="/">New Game</a>
-  </nav>
+<!-- display the board in a Jinja template -->
+<!-- You will be generating a board on the backend using a function from the boggle.py file and sending that to your Jinja template -->
+{% block content %}
 
 <div class="container">
-  <section id="boggle">
-      <h1>Boggle</h1>
-      <div>
-        <p>Find as many words as you can in 60 seconds.</p>
+  <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        
+          <p class="lead">Instructions:</p>
+            <p class="lead">The goal of the game is to get the highest point total.</p>
+            <p class="lead">To gain points, create words from a random assortment of letters in the grid.</p>
+            <p class="lead">Words can be created from adjacent letters as well as diagonals.</p>
+            <p class="lead">Find as many words as you can in 60 seconds.</p>
       </div>
-        <table class="board">
-          <tbody>
-            {% for row in board %}
-            <tr>
-              {% for cell in row %}
-              <td>{{ cell }}</td>
-              {% endfor %}
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
+  </div>
 
-        <div class="scoreboard">
-          <p>Score: <b class="score">0</b></p>
-          <p>Seconds Left: <b class="timer"></b></p>
-        </div>
-
-        <div class="high-score">
-          <p>High score: <span>{{session['highscore']}} in {{session['nplays']}} play(s)</span></p>
-        </div>
-
-        <form method="POST" class="add-word">
-          <input name="word" class="word" autofocus placeholder="Type word and press enter">
-          <button>Enter</button> 
-        </form>
-
-     <p class="msg">
-          <!-- our JS will put messages here dynamically -->
-    </p>
-    <ul class="words">
-        <!-- our JS will words here as they score -->   
-    </ul> 
-
-  </section>
-    
+  <form action="/board" method="GET">
+      <button type="submit" class="btn btn-primary">Play!</button>
+  </form>
 </div>
-
-<footer class="footer">
-  <h3>&copy; 2023 russeth designs</h3>
-</footer>
-
-  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="static/boggle.js"></script>
-  <script>
-      let game = new BoggleGame("boggle", 60);
-    </script>
-    
-</body>
-</html>
+{% endblock %}
