--- a/flask-boggle/static/boggle.css
+++ b/flask-boggle/static/boggle.css
@@ -1,17 +1,28 @@
+body {
+    margin: 0 auto;
+    width: 100%;
+    background-color: lightcoral;
+}
+
 .container {
     margin: 0 auto;
     width: 100%;
-    background-color:aliceblue;
 }
+
+.jumbotron {
+    margin: 0 auto;
+    width: 100%;
+    background-color: lightcoral;
+    padding: 2px;
+}
+
 
 #boggle {
   margin: 0 auto;
-  text-align: center;
-  width: 400px;
+  width: 700px;
 }
 
 .board {
-  margin: 0 auto;
   text-align: center;
   width: 100%;
   border: solid 2px black;
@@ -32,7 +43,15 @@
 input {
   display: inline;
   width: 240px;
-  height: 25px;
+  height: 35px;
+}
+
+.message-container {
+  margin-top: 0px;
+  border: solid 1px black;
+  background-color: #fff;
+  width: 300px;
+  padding: 10px;
 }
 
 .msg {
@@ -56,7 +75,6 @@ button {
     display: inline;
     height: 35px;
     vertical-align: top;
-    background-color:purple;
     color: #fff;
     border: 2px solid white;
     border-radius:6px;
@@ -79,10 +97,11 @@ button {
   }
 
   h3 {
-    display: relative ;
+    margin-top: 5px;
+    display: relative;
     font-family: "Righteous", cursive;
     font-size: 1rem;
-    color: white;
+    color: black;
   }
 
   p {
@@ -104,9 +123,10 @@ button {
   .scoreboard {
     display: inline-flex;
     margin: 0 auto;
+    text-align: center;
     margin-top: 10px;
     margin-bottom: 10px;
-    width: 170px;
+    width: 180px;
     background-color: lightgrey;
     border: solid 2px black;
     border-radius: 10px;
@@ -117,9 +137,10 @@ button {
   .high-score {
     display: inline-flex;
     margin: 0 auto;
+    text-align: center;
     margin-top: 10px;
     margin-bottom: 10px;
-    width: 110px;
+    width: 125px;
     background-color:yellow;
     border: solid 2px black;
     border-radius: 10px;
@@ -128,14 +149,14 @@ button {
 
   .navbar {
     background-color: black;
-    overflow: hidden;
+    text-align: left;
   }
 
   .navbar a {
     float: left;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px;
     text-decoration: none;
     font-family: "Righteous", cursive;
     font-weight: bold;
@@ -147,9 +168,3 @@ button {
     color: black;
   }
   
-  .footer {
-    background-color: black;
-    color: white;
-    margin: 0 auto;
-    padding: 1px;
-  }
