--- a/flask-boggle/templates/index.html
+++ b/flask-boggle/templates/index.html
@@ -6,13 +6,12 @@
 
 <div class="container">
   <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        
-          <p class="lead">Instructions:</p>
-            <p class="lead">The goal of the game is to get the highest point total.</p>
-            <p class="lead">To gain points, create words from a random assortment of letters in the grid.</p>
-            <p class="lead">Words can be created from adjacent letters as well as diagonals.</p>
-            <p class="lead">Find as many words as you can in 60 seconds.</p>
+      <div class="instructions">
+        <p class="lead">Instructions:</p>
+              <p>The goal of the game is to get the highest point total.</p>
+              <p>To gain points, create words from a random assortment of letters in the grid.</p>
+              <p>Words can be created from adjacent letters as well as diagonals.</p>
+              <p>Find as many words as you can in 60 seconds.</p>
       </div>
   </div>
 
