--- a/flask-blogly/templates/base.html
+++ b/flask-blogly/templates/base.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/static/app.css">
     <title>{% block title %}{% endblock%}</title>
 </head>
 <body>
 <nav class="navbar">
-        <a href="/">Blogly Home</a>
+        <a href="/">BLOGLY <i class="bi bi-chat-left-quote"></i></a>
 </nav>
 
 <main id="content">
