--- a/flask-blogly-2/static/app.css
+++ b/flask-blogly-2/static/app.css
@@ -1,13 +1,9 @@
 body {
 	margin: 0 auto;
-	padding: 10;
-	margin: 40;
 	font-family: Arial, Helvetica, sans-serif;
 }
 #content {
-	margin: 0 auto;
-	padding: 20px;
-	margin: 40px;
+	padding: 5px;
 }
 .navbar {
 	background-color: rgb(131, 1, 131);
@@ -27,4 +23,8 @@ body {
 .navbar a:hover {
 	background-color: #ddd;
 	color: black;
+}
+
+.jumbotron{
+    height: 100vh;
 }
