--- a/flask-blogly-2/templates/posts/show.html
+++ b/flask-blogly-2/templates/posts/show.html
@@ -15,7 +15,7 @@
     <form>
         <button class="btn btn-outline-primary"
                 formmethod="GET"
-                formaction="/users/{{ post.user_id }}">Cancel</button>
+                formaction="/users/{{ post.user_id }}">View user posts</button>
         <button class="btn btn-primary"
                 formmethod="GET"
                 formaction="/posts/{{ post.id }}/edit">Edit</button>
