--- a/flask-blogly-2/static/app.css
+++ b/flask-blogly-2/static/app.css
@@ -3,7 +3,9 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 #content {
+	margin: 0 auto;
 	padding: 5px;
+
 }
 .navbar {
 	background-color: rgb(131, 1, 131);
@@ -23,6 +25,10 @@ body {
 .navbar a:hover {
 	background-color: #ddd;
 	color: black;
+}
+
+.container {
+	height: 100vh;
 }
 
 .jumbotron{
