--- a/flask-blogly-2/templates/homepage.html
+++ b/flask-blogly-2/templates/homepage.html
@@ -5,11 +5,10 @@
 {% block content %}
 
 <div class="row">
-  <div class="col-md-4 no-padding"> <!-- add no-padding -->
+  <div class="col-md-3 no-padding"> <!-- add no-padding -->
     <div class="jumbotron text-left">
        <div class="container">
-
-        <h3>Users</h2>
+        <h4>Users</h4>
         <ul class="list-unstyled">
         {% for user in users %}
           <li>
@@ -23,12 +22,11 @@
         </div>
     </div>
   </div>
-  <div class="col-md-8 no-padding"> <!-- add no-padding -->
-    <div class="jumbotron text-left">
-       <div class="container">
-          <h3>Blogly Recent Posts</h2>
+  <div class="col-md-9 no-padding mt-4"> <!-- add no-padding -->
+      <div class="container">
+        <h4>Blogly Recent Posts</h4>
           {% for post in posts %}
-          <hr
+          <hr>
           <h5 class="mt-2">
             <a href="/posts/{{ post.id }}">{{ post.title }}</a>
           </h5>
@@ -36,9 +34,7 @@
           <p><i>By {{ post.user.full_name }} on {{ post.friendly_date }}
            </i></p>
           {% endfor %}
-        </div>  
-
-    </div>
+      </div>  
   </div>
 </div>
 
