--- a/flask-pet-adopt/templates/pet_list.html
+++ b/flask-pet-adopt/templates/pet_list.html
@@ -5,9 +5,11 @@
 
 <div class="row pets-listing">
     {% for pet in pets %}
-    <div class="col-3">
+    <div class="col-lg-3">
       <div class="card">
-        <img class="card-image-top" src="{{ pet.image_url() }}"  alt="Pet photo" >
+        <div class="embed-responsive embed-responsive-16by9">
+          <img class="card-img-top embed-responsive-item" src="{{ pet.image_url() }}"  alt="Pet photo" >
+        </div>
         <div class="card-body">
             <a href="{{ url_for('edit_pet', pet_id=pet.id) }}">{{ pet.name }}</a>
             {% if pet.available %} <b class="text-success">is available!</b> {% endif %}
