--- a/flask-pet-adopt/static/app.css
+++ b/flask-pet-adopt/static/app.css
@@ -16,9 +16,7 @@ body {
 	min-height: 350px;
 }
 
-.card-img-top {
-    width: 100%;
-    height: 15vw;
+.embed-responsive .card-img-top {
     object-fit: cover;
 }
 
