--- a/flask-cupcakes/static/app.css
+++ b/flask-cupcakes/static/app.css
@@ -10,6 +10,34 @@
   padding: 10px;
 }
 
+p {
+  font-size: 20px;
+  margin: 0;
+  margin-top: -5px
+}
+
+.navbar {
+	background-color: purple;
+	overflow: hidden;
+	text-align: center;
+}
+
+.navbar a {
+	float: left;
+	color: #f2f2f2;
+	padding: 10px;
+	text-decoration: none;
+	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bold;
+	font-size: 17px;
+}
+
+.navbar a:hover {
+	background-color: #ddd;
+	color: black;
+}
+
 
 
 /* Path: static/app.js */
