--- a/flask-cupcakes/templates/base.html
+++ b/flask-cupcakes/templates/base.html
@@ -10,6 +10,14 @@
 </head>
 <body>
 
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark p-2">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+            <a href="/">The Cupcake Shoppe <i class="bi bi-search-heart"></i></a>
+        </li>
+    </ul>
+</nav>
+
 <div class="container">
   {% block content %}
   {% endblock %}
