--- a/flask-cupcakes/static/app.css
+++ b/flask-cupcakes/static/app.css
@@ -5,15 +5,30 @@
 #all-cupcakes {
   display: inline-flex;
   flex-wrap: wrap;
-  justify-content: center;
   gap: 10px;
   padding: 10px;
 }
 
-p {
-  font-size: 20px;
+li {
+  font-size: 14px;
   margin: 0;
-  margin-top: -5px
+  list-style-type: none;
+}
+
+.delete-button {
+  background-color: grey;
+  color: white;
+  border-radius: 5px;
+  border: none;
+  margin: 0;
+  font-size: 10px;
+}
+
+img {
+  height: 180px;
+  width: 180px;
+  border-radius: 5%;
+  margin: 0;
 }
 
 .navbar {
