--- a/flask-feedback/templates/users/show.html
+++ b/flask-feedback/templates/users/show.html
@@ -15,7 +15,7 @@
 
       <li>
         {{ feedback.title }}
-        <small>{{ feedback.content }}</small>
+        <p><small>{{ feedback.content }}</small></p>
       </li>
 
       <form>
